[gd_scene load_steps=14 format=3 uid="uid://hausr53v5vta"]

[ext_resource type="Script" path="res://Entity/Enemy/Slime/Slime.gd" id="1_vt5ga"]
[ext_resource type="Texture2D" uid="uid://cy017jhy38apb" path="res://Sprites/Slime.png" id="2_lke2n"]
[ext_resource type="Texture2D" uid="uid://btimcgsfgilu6" path="res://Entity/Sprites/SpriteSheet00.png" id="3_towlw"]
[ext_resource type="Texture2D" uid="uid://bln8h2wjekdoc" path="res://Sprites/Shadow.png" id="4_t2jc4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6d6k8"]
size = Vector2(99, 38)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_su58b"]
radius = 46.0
height = 116.0

[sub_resource type="Animation" id="Animation_x8l0w"]
resource_name = "Damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin/Shadow:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1.4139, 6.51663), Vector2(-1.4139, 6.51663)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin/Shadow:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin/Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.0923, 2.20129), Vector2(2.0923, 2.20129)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin/Body:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -8), Vector2(0, -1), Vector2(4.02331e-08, 3), Vector2(0, -8)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skin/Body:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0847206, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skin/Body:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 0.6, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.932269, 0.76453), Vector2(0.845025, 0.538962), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_uvigd"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-3, -58), Vector2(0, -76), Vector2(0, 8), Vector2(0, 8), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.160513, 0.0731927, 0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin/Body:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.7, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.57137, 0.995469), Vector2(0.759998, 0.56), Vector2(0.478781, 0.789961), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin/Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-4, 5), Vector2(-2, 3), Vector2(-1.49012e-07, 15), Vector2(-2, 7)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skin/Shadow:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skin/Shadow:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(2.21577, 2.37506), Vector2(1.02123, 1.69021), Vector2(1.1423, 1.92791), Vector2(2.16215, 2.27103)]
}

[sub_resource type="Animation" id="Animation_dmaep"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skin/Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Skin/Body:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Skin/Body:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Skin/Shadow:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 37)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Skin/Shadow:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Skin/Shadow:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.77966, 2.35294)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6v4tn"]
_data = {
"Damage": SubResource("Animation_x8l0w"),
"Idle": SubResource("Animation_uvigd"),
"RESET": SubResource("Animation_dmaep")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jok2f"]
size = Vector2(427, 122)

[sub_resource type="Curve" id="Curve_kxvyk"]
_data = [Vector2(0.0530612, 0.747253), 0.0, 0.0, 0, 0, Vector2(1, 0.098901), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_agahg"]
radius = 68.0
height = 138.0

[node name="Slime" type="CharacterBody2D"]
script = ExtResource("1_vt5ga")
health = 10
speed = 120.0

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 3)
shape = SubResource("RectangleShape2D_6d6k8")
debug_color = Color(0.992157, 0, 0.227451, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -15)
shape = SubResource("CapsuleShape2D_su58b")
debug_color = Color(0.858824, 0.364706, 0.0745098, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6v4tn")
}
speed_scale = 1.7

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="LineOfSight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="LineOfSight"]
position = Vector2(203.5, 7)
shape = SubResource("RectangleShape2D_jok2f")

[node name="AttackTimer" type="Timer" parent="."]

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 24
one_shot = true
explosiveness = 1.0
draw_order = 1
texture = ExtResource("2_lke2n")
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 150.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 4.0
scale_amount_curve = SubResource("Curve_kxvyk")

[node name="Skin" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Body" type="Sprite2D" parent="Skin"]
texture = ExtResource("3_towlw")
offset = Vector2(-1, -30)
region_enabled = true
region_rect = Rect2(589, 202, 97, 86)

[node name="HitBox" type="Area2D" parent="Skin"]
collision_layer = 128
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skin/HitBox"]
position = Vector2(-4, -20)
shape = SubResource("CapsuleShape2D_agahg")
debug_color = Color(0.643137, 0.141176, 0.627451, 0.419608)

[node name="Shadow" type="Sprite2D" parent="Skin"]
z_index = -1
position = Vector2(0, 37)
scale = Vector2(2.77966, 2.35294)
texture = ExtResource("4_t2jc4")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="LineOfSight" to="." method="_on_line_of_sight_body_entered"]
[connection signal="body_exited" from="LineOfSight" to="." method="_on_line_of_sight_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="finished" from="CPUParticles2D" to="." method="_on_cpu_particles_2d_finished"]
[connection signal="area_entered" from="Skin/HitBox" to="." method="_on_hit_box_area_entered"]
